--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,18 @@
       content="Health Line administering your online first aid"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon" />
- 
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  
+
     <title>Health Line</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </html>
